-Fixed multishot enchantment -Updated obfuscator, so it can obfuscate mixins on this mod
Signed-off-by: Flytre <flytre7@gmail.com>